# cca

./: .gitignore  cca.opam  install.sh
.circleci/: config.yml
src/: rules.mk
src/ast/analyzing/: .depend  Makefile  astcore.ml  parsesrc.ml
src/ast/analyzing/common/: .depend  Makefile  lang_base.ml  misc.ml  parser_options.ml  sourcecode.ml  spec.ml  storage.ml  storage.mli
src/ast/analyzing/engine/: .depend  Makefile
src/ast/analyzing/langs/astml/: .depend  Makefile  lib_base.ml
src/ast/analyzing/langs/common/: .depend  Makefile  env_base.ml  env_base.mli  parserlib_base.ml  parserlib_base.mli  source_base.ml  source_base.mli
src/ast/analyzing/langs/cpp/: cpp_lib_base.ml
src/ast/analyzing/langs/cpp/parsing/src/: .depend  Makefile  lib.ml  lib.mli  scanner.ml
src/otreediff/: Makefile
src/otreediff/src/: .depend  Makefile  otree.ml
src/util/: .depend  Makefile
