opam-version: "2.0"
authors: ["Codinuum"]
homepage:"https://github.com/petr-bauch/cca/"
maintainer: "Codinuum <codinuum@me.com>"
bug-reports: "https://github.com/petr-bauch/cca/issues"
dev-repo: "git+https://github.com/petr-bauch/cca.git"
license: "Apache-2.0"
build: [
  [ make "-j" jobs "-C" "src/util"]
  [ make "-C" "src/mldiff"]
  [ make "-j" jobs "-C" "src/otreediff"]
  [ make "-j" jobs "-C" "src/ast/analyzing/common"]
  [ make "-j" jobs "-C" "src/ast/analyzing/engine"]
  [ make "-j" jobs "-C" "src/ast/analyzing/langs/astml"]
  [ make "-j" jobs "-C" "src/ast/analyzing/langs/common"]
  [ make "-C" "src/ast/analyzing/langs/cpp/parsing/src"]
  [ make "-j" jobs "-C" "src/ast/analyzing/langs/cpp"]
  [ make "-j" jobs "-C" "src/ast/analyzing"]
]
depends: [
  "ocaml" {>= "4.11.0"}
  "camlzip"
  "cryptokit"
  "csv"
  "git-unix" {>= "3.3.0" & < "3.7.0"}
  "menhir" {>= "20170418"}
  "ocamlnet"
  "pxp"
  "uuidm"
  "volt"
]
available: arch != "x86_32" & arch != "arm32" & arch != "ppc64"
synopsis: "A framework for code continuity analysis"
description: """
CCA is currently composed of the following:
* parsers for Python, Java, Verilog, Fortran, and C/C++,
* an AST differencing tool, Diff/AST, based on the parsers,
* helper scripts for factbase manipulation, and
* ontologies for the related entities."""
